# knowledge-node

pallets/hkc/: Cargo.toml  README.md
pallets/hkc/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
